# leadflow

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml  test-10-leads.csv
configs/: _template.yaml
dashboard/: middleware.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: nav-auth.tsx
dashboard/lib/: supabase-server.ts  supabase.ts  utils.ts
growthpal/: __init__.py  __main__.py  cli.py  config.py  constants.py  http.py
growthpal/ai/: deepseek_client.py  gemini_client.py  openai_client.py  router.py
growthpal/db/: client.py  queries.py
growthpal/enrichments/: __init__.py  base.py  company_research.py  custom_ai.py  email_finding.py  email_generation.py  email_verification.py  icp_qualification.py  job_title_cleaning.py  job_title_icp.py  name_cleaning.py  signal_detection.py  strategy_router.py
growthpal/integrations/: bettercontact.py  bounceban.py  csv_handler.py  deepline.py  prospeo.py  reoon.py  smartlead.py  trykitt.py
growthpal/pipeline/: batch.py  registry.py  runner.py
growthpal/research/: __init__.py  ai_research.py  batch_cascade.py  cache.py  cascade.py  commoncrawl.py  domain_utils.py  extractors.py  heuristics.py  live_scrape.py  serper.py  tavily.py
growthpal/scrapers/: website.py
growthpal/utils/: cost_tracker.py  logger.py  progress.py  rate_limiter.py  retry.py
leadflow/: __init__.py  __main__.py  cli.py  config.py  constants.py
worker/: api.py  config.py  db.py  main.py  processor.py  stats.py
(+47 files in other folders)
